--- a/content/2.payloads-info/default.yml
+++ b/content/2.payloads-info/default.yml
@@ -13,5 +13,5 @@ content: |
         <p>In the event we make it to the finals of the XPRIZE we will then put the winnings back into the community by co-funding the patronisation of the community as a way of fairly identifying who should be rewarded for their involvement in the development of <b>free education</b> that enables kids (and adults) in need, to learn how to read, write and do math.</p>
         <p>But even if we don't make it to the XPRIZE finals we are committed to building a sustainable way of providing quality free education through the power of community and technology!<p>
         <p>Have a look at how you can contribute to Teacher Virus for more details!</p>
-         <p><a class="btn lrg btn-primary" href="/?/contribute/" role="button"></b> Contribute »</a></p>
+         <p><a class="btn lrg btn-primary" href="?/contribute/" role="button"></b> Contribute »</a></p>
     </div>
